# DayZ-Server-Monitor

./: Cargo.toml  README.md  Server.toml  logging_config.yaml
src/: command.rs  config.rs  error.rs  main.rs
