[package]
name = "dayz-server-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.22"
colored = "2.0.0"
futures = "0.3"
job_scheduler_ng = "2.0.1"
lazy_static = "1.4.0"
log = "0.4.11"
log4rs = "1.1.1"
serde = { version = "1.0.126", features = ["derive"]}
serde_derive = "1.0.126"
toml = "0.5"
